# octo

./: .gitattributes  .gitignore  .mega-linter.yml  .trivyignore  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  WIP_CHANGES.md  about.hbs  about.toml  build.rs  cai_config.yml  deny.toml  install.bat  install.sh  mkdocs.yml  octa.desktop  octo.desktop  pyproject.toml  release_notes.md  uninstall.sh
.github/aur/: .SRCINFO  PKGBUILD
.github/aur-bin/: .SRCINFO  PKGBUILD
.github/megalinter-rust/: Dockerfile
.github/workflows/: aur-release.yml  ci.yml  docs.yml  release.yml
.linters/: .bandit.yml  .checkov.yml  .ls-lint.yml  .markdownlint.json  .proselintrc  .yamllint.yml  check_git_branch_name.sh  lychee.toml  trivy.yml  validate_branch_name.sh
.linters/mega-linter-plugin-branchname/: branchname.megalinter-descriptor.yml
assets/: Terraform.sublime-syntax
docs/: index.md  troubleshooting.md
docs/assets/screenshots/: INDEX.md
docs/cli/: compare-schemas.md  convert.md  describe.md  export-schema.md  head.md  index.md  man-page.md  octa.1.adoc  schema.md  sql.md  unique-columns.md  validate-schema.md
docs/getting-started/: first-steps.md  installation.md  supported-formats.md
docs/mcp/: examples.md  index.md  limits-and-truncation.md  setup.md  troubleshooting.md
docs/mcp/tools/: compare_schemas.md  convert.md  count_rows.md  describe_file.md  export_schema.md  find_duplicates.md  index.md  list_tables.md  profile.md  read_table.md  run_sql.md  schema.md  search.md  unique_columns.md  validate_against_schema.md  value_frequency.md
docs/reference/: csv-quote-escape.md  date-inference.md  settings.md  shortcuts.md
docs/stylesheets/: extra.css
docs/tips/: workflows.md
docs/usage/: archive-viewer.md  chart.md  colour-marking.md  column-inspector.md  editing.md  formulas.md  saving.md  schema-export.md  search-and-filter.md  sql.md  table-view.md  tabs-and-sidebar.md  value-frequency.md
docs/usage/view-modes/: compare.md  epub-reader.md  json-and-yaml-tree.md  map.md  markdown.md  notebook.md  overview.md  raw-text.md
licenses/: Apache-2.0.txt  BSD-2-Clause.txt  BSD-3-Clause.txt  BSL-1.0.txt  CC0-1.0.txt  CDLA-Permissive-2.0.txt  ISC.txt  MIT.txt  OFL-1.1.txt  Ubuntu-font-1.0.txt  Unicode-3.0.txt  Zlib.txt
pkg/: README-linux.md  README-macos.md  README-windows.md  README.md  build-local.sh
src/: lib.rs  main.rs  view_modes.rs
src/app/: archives.rs  bg_rows.rs  central_panel.rs  clipboard.rs  easter_eggs.rs  edit_ops.rs  file_io.rs  find_replace.rs  init.rs  mod.rs  multi_search.rs  shortcuts_dispatch.rs  sidebar.rs  sql_panel.rs  state.rs  status_bar.rs  tabs.rs  toolbar_handler.rs  update_loop.rs
src/app/dialogs/: about.rs  add_column.rs  column_filter.rs  column_format.rs  column_inspector.rs  delete_columns.rs  documentation.rs  find_duplicates.rs  mod.rs  parse_in_new_tab.rs  readonly_notice.rs  reload_confirm.rs  round_save_prompt.rs  schema_export.rs  settings.rs  sheet_picker.rs  sql_write_back.rs  table_picker.rs  unsaved_changes.rs  update_dialog.rs  value_frequency.rs  value_frequency_picker.rs
src/app/dialogs/documentation/: content.rs  mod.rs
src/app/update_check/: install_unix.rs  mod.rs
src/cli/: compare_schemas.rs  convert.rs  describe.rs  export_schema.rs  head.rs  mod.rs  output.rs  schema.rs  sql.rs  unique_columns.rs  validate_schema.rs
src/data/: chart.rs  chart_export.rs  compare_schemas.rs  date_infer.rs  describe.rs  duplicates.rs  formulas.rs  json_util.rs  mod.rs  multi_search.rs  num_format.rs  search.rs  trim.rs  unique_columns.rs  validate_schema.rs  value_frequency.rs
src/data/schema_export/: json_schema.rs  mod.rs  pydantic.rs  rust.rs  sql.rs  typescript.rs
src/formats/: archive_reader.rs  arrow_ipc_reader.rs  avro_reader.rs  csv_reader.rs  dbf_reader.rs  duckdb_reader.rs  epub_reader.rs  excel_reader.rs  geojson_reader.rs  gpkg_reader.rs  hdf5_reader.rs  json_reader.rs  jupyter_reader.rs  markdown_reader.rs  mod.rs  netcdf_reader.rs  ods_reader.rs  orc_reader.rs  parquet_reader.rs  pdf_reader.rs  rds_reader.rs  sas_reader.rs  spss_reader.rs  sqlite_reader.rs  stata_reader.rs  text_reader.rs  toml_reader.rs  xml_reader.rs  yaml_reader.rs
src/mcp/: mod.rs
src/mcp/tools/: compare_schemas.rs  convert.rs  count_rows.rs  describe_file.rs  export_schema.rs  find_duplicates.rs  list_tables.rs  mod.rs  profile.rs  read_table.rs  run_sql.rs  schema.rs  search.rs  unique_columns.rs  validate_schema.rs  value_frequency.rs
src/sql/: engine.rs  mod.rs  workspace.rs
src/ui/: directory_tree.rs  mod.rs  settings.rs  shortcuts.rs  status_bar.rs  syntax.rs  table_picker.rs  table_view.rs  theme.rs  toolbar.rs
src/ui/settings/: dialog.rs  mod.rs
src/ui/table_view/: header.rs  mod.rs  rows.rs  state.rs
src/ui/theme/: mod.rs  palettes.rs  visuals.rs
src/view_modes/: chart.rs  epub_reader.rs  json_tree.rs  map.rs  markdown.rs  mod.rs  notebook.rs  pdf.rs  raw_text.rs  sql.rs  text_ops.rs
src/view_modes/compare/: hash.rs  mod.rs  row_diff.rs  text_diff.rs
tests/: archive_reader_tests.rs  chart_tests.rs  compare_schemas_tests.rs  csv_tests.rs  data_model_tests.rs  dbf_tests.rs  describe_tests.rs  directory_tree_tests.rs  duckdb_tests.rs  duplicates_tests.rs  format_open_tests.rs  format_registry_tests.rs  formula_tests.rs  gpkg_tests.rs  hdf5_tests.rs  icon_variant_tests.rs  json_tests.rs  json_tree_tests.rs  jupyter_tests.rs  markdown_tests.rs  multi_search_tests.rs  netcdf_tests.rs  parquet_tests.rs  rds_tests.rs  sas_tests.rs  schema_export_tests.rs  search_tests.rs  spss_tests.rs  sql_tests.rs  sql_workspace_tests.rs  sqlite_tests.rs  stata_tests.rs  status_bar_tests.rs  text_tests.rs  toml_tests.rs  unique_columns_tests.rs  validate_schema_tests.rs  value_frequency_tests.rs  yaml_tests.rs
tests/common/: mod.rs
tests/fixtures/: compound.h5  sample.arrow  sample.avro  sample.csv  sample.dbf  sample.json  sample.md  sample.nc  sample.orc  sample.parquet  sample.toml  sample.tsv  sample.txt  sample.xlsx  sample.xml  sample.yaml
windows/: octa.exe.manifest  octo.exe.manifest
