[package]
name = "octa"
version = "0.0.0-dev"
edition = "2024"
authors = ["Thorsten Foltz <thorsten.foltz@live.com>"]
description = "A modular multi-format data viewer and editor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thorstenfoltz/octa"
keywords = ["data-viewer", "parquet", "csv", "gui", "egui"]
categories = ["visualization", "gui"]

[lib]
name = "octa"
path = "src/lib.rs"

[[bin]]
name = "octa"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["default"] }
parquet = { version = "54", features = ["default"] }
arrow = { version = "54", features = ["default"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
pdf-extract = "0.7"
printpdf = "0.7"
chrono = "0.4"
anyhow = "1"
arboard = "3"
csv = "1"
calamine = "0.26"
rust_xlsxwriter = "0.82"
apache-avro = "0.17"
quick-xml = "0.37"
toml = "0.8"
serde_yaml = "0.9"
mupdf = "0.6"
resvg = "0.47"
egui_commonmark = "0.20"
ureq = "3"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
regex-syntax = "0.8"
orc-rust = { version = "0.8.0", default-features = false }
arrow58 = { package = "arrow", version = "58", default-features = false, features = ["prettyprint"] }
hdf5-reader = "0.2.0"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
