[package]
name = "octa"
version = "0.0.0-dev"
edition = "2024"
authors = ["Thorsten Foltz <thorsten.foltz@live.com>"]
description = "A modular multi-format data viewer and editor"
license = "MIT"
readme = "README.md"
repository = "https://github.com/thorstenfoltz/octa"
keywords = ["data-viewer", "parquet", "csv", "gui", "egui"]
categories = ["visualization", "gui"]

[lib]
name = "octa"
path = "src/lib.rs"

[[bin]]
name = "octa"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = { version = "0.31", features = ["serde"] }
egui_extras = { version = "0.31", features = ["default"] }
parquet = { version = "54", features = ["default"] }
arrow = { version = "54", features = ["default"] }
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = "0.4"
anyhow = "1"
arboard = "3"
csv = "1"
calamine = "0.34"
rust_xlsxwriter = "0.94"
apache-avro = "0.21"
quick-xml = "0.39"
toml = "1"
serde_yaml = "0.9"
mupdf = "0.6"
resvg = "0.47"
egui_commonmark = "0.20"
ureq = "3"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
regex = "1"
regex-syntax = "0.8"
orc-rust = { version = "0.8.0", default-features = false }
arrow58 = { package = "arrow", version = "58", default-features = false, features = ["prettyprint"] }
hdf5-reader = "0.4"
rusqlite = { version = "0.39", features = ["bundled"] }
duckdb = { version = "1", features = ["bundled"] }
rand = "0.10"
sas7bdat = { version = "0.2", default-features = false, features = ["time"] }
ambers = "0.4"
arrow57 = { package = "arrow", version = "57", default-features = false }
dta = "0.5"
dbase = "0.7"
rds2rust = "0.1.41"
netcdf3 = "0.6"
pulldown-cmark = { version = "0.12", default-features = false }
tempfile = "3"

[build-dependencies]
winresource = "0.1"
